--- a/HW2/hw2.2.5.ipynb
+++ b/HW2/hw2.2.5.ipynb
@@ -69,7 +69,9 @@
     "\n",
     "clf = DecisionTree()\n",
     "clf.fit(X, Y)\n",
-    "clf.visualize_tree()"
+    "clf.visualize_tree()\n",
+    "\n",
+    "visualize_decision_tree_graphviz(clf, file_name='hw2.2.5.1_graph')"
    ]
   },
   {
@@ -164,7 +166,8 @@
     "\n",
     "clf = DecisionTree()\n",
     "clf.fit(X, Y)\n",
-    "clf.visualize_tree()"
+    "clf.visualize_tree()\n",
+    "visualize_decision_tree_graphviz(clf, file_name='hw2.2.5.2_graph')"
    ]
   },
   {
